# catalogs_crawler

./: README.md  pyproject.toml
src/: targets.json
src/catalogs_crawler/: __main__.py  parser.py
