[tool.poetry]
name = "catalogs_crawler"
version = "0.1.0"
description = ""
authors = ["Serz999 <serz_999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
bs4 = "^0.0.1"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
